<resources>
    <string name="app_name">MovieApp</string>
    <string name="title_movie_detail">Movie Detail</string>
    <string name="title_activity_trailer">ReviewActivity</string>
    <string name="notify_error">Enter offline Mode</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_movie_sort">Sort Movie</string>
    <string name="release_date_text">Release Date: </string>
    <string name="rating">Rating: </string>
    <string name="setting_menu">Setting</string>
    <string name="movie_poster_contentDesc">movie poster</string>
    <string name="trailers_Title">Trailers</string>
    <string name="no_trailers_found">No Trailers Found</string>
    <string name="reviews">Reviews</string>
    <string name="no_reviews_found">No Reviews Found</string>
    <string-array name="pref_movie_sort">
        <item>top_rated</item>
        <item>popular movies</item>
        <item>Favourite</item>
    </string-array>
    <string-array name="pref_movie_sort_value">
        <item>top_rated</item>
        <item>popular</item>
        <item>favourite</item>
    </string-array>

</resources>
