<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/contanier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/image_container"
            android:layout_width="0dp"
            android:layout_height="400dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1">

            <ImageView
                android:id="@+id/movie_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:transitionName="poster"
                android:contentDescription="@string/movie_poster_contentDesc"


                android:scaleType="fitXY" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:background="#66160707"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="bottom"
                    android:background="#66160707"
                    android:paddingEnd="40dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="40dp"
                    android:paddingStart="10dp"
                    android:textColor="#ddd"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:text="Jings Man: the golded king" />


            </RelativeLayout>

        </FrameLayout>


        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="#000"
            app:layout_constraintLeft_toRightOf="@+id/release_date_text"
            app:layout_constraintTop_toBottomOf="@+id/image_container"
            tools:text="2015" />

        <TextView
            android:id="@+id/release_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:padding="2dp"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:text="@string/release_date_text"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="#000"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/release_date"
            app:layout_constraintRight_toLeftOf="@+id/release_date"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="#000"
            app:layout_constraintLeft_toRightOf="@+id/movie_rating_text"
            app:layout_constraintTop_toBottomOf="@+id/release_date_text"
            tools:text="10/10" />

        <TextView
            android:id="@+id/movie_rating_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"

            android:paddingStart="10dp"
            android:text="@string/rating"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="#000"
            android:textStyle="bold"
            app:layout_constraintRight_toLeftOf="@+id/movie_rating"
            app:layout_constraintTop_toBottomOf="@+id/release_date_text" />

        <TextView
            android:id="@+id/movie_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:padding="10dp"
            android:paddingTop="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            app:layout_constraintLeft_toLeftOf="@+id/image_container"
            app:layout_constraintRight_toRightOf="@+id/image_container"
            app:layout_constraintTop_toBottomOf="@+id/image_container" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            app:backgroundTint="#00BCD4"
            app:fabSize="normal"
            app:layout_constraintBottom_toTopOf="@+id/movie_desc"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_unfavourite" />

        <TextView
            android:id="@+id/Trailer_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/trailers_Title"
            android:textColor="#00BCD4"
            android:textSize="25sp"
            android:textStyle="bold"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_creator="1"
            app:layout_constraintTop_toBottomOf="@+id/movie_desc" />

        <FrameLayout
            android:id="@+id/trailer_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingEnd="2dp"
            android:paddingLeft="10dp"
            android:paddingRight="2dp"
            android:paddingStart="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Trailer_title">

            <ProgressBar
                android:id="@+id/trailer_progress"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal|center_vertical" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailer_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/no_trailer_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/no_trailers_found"
                android:textSize="25sp"
                android:visibility="gone" />
        </FrameLayout>

        <TextView
            android:id="@+id/REVIEW_title"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/reviews"
            android:textColor="#00BCD4"
            android:textSize="25sp"
            android:textStyle="bold"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_creator="1"
            app:layout_constraintTop_toBottomOf="@+id/trailer_container" />

        <FrameLayout
            android:id="@+id/review_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:paddingEnd="2dp"
            android:paddingLeft="10dp"
            android:paddingRight="2dp"
            android:paddingStart="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/REVIEW_title">

            <ProgressBar
                android:id="@+id/review_progress"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal|center_vertical"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="81dp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/review_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="81dp" />

            <TextView
                android:id="@+id/no_reviews_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/no_reviews_found"
                android:textSize="25sp"
                android:visibility="gone"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="81dp" />
        </FrameLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>